...
    <string name="cal_done">Done</string>
    <string name="cal_hour">Hour</string>
    <string name="cal_minute">Minute</string>
    <string name="cal_am_pm">AM or PM</string>
    <string name="cal_next">Next</string>
    <string name="cal_previous">Previous</string>
    <string name="cal_previous_month">Previous month</string>
    <string name="cal_next_month">Next month</string>
    <string name="cal_month">Month</string>
    <string name="cal_year">Year</string>
    <string name="cal_start">Start</string>
    <string name="cal_add_time">Add time</string>
    <string name="cal_end">End</string>
...
